--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age. Seeding at least half of your snatched torrents.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>CCS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>D3</td><td>14&nbsp;days</td><td>Torrent Master user class. 1.5 ratio. 50 Perfect FLAC torrent uploads. 1 year account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>DIC</td><td>14&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
@@ -107,6 +108,7 @@
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>CRT</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>CZ</td><td>180&nbsp;days</td><td>Fanatic user class. 50 uploaded torrents, or 75 adopted torrents. 6 months account age.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>NBL</td><td>180&nbsp;days</td><td>Fanatic user class. 6 months account age.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>OPS</td><td>90&nbsp;days</td><td>Fanatic user class. ANT activity proof.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx user class: 3.2TB upload, 1.44 million seed bonus points, no Hit and Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit and Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit and Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
@@ -166,6 +168,7 @@
 <tr><th scope="row">BTN<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>2 months account age.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>GPW</td><td>30&nbsp;days</td><td>10 torrents uploaded.</td></tr>
@@ -214,7 +217,7 @@
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.<br>Additional invite forum unlocks with Legendary Gamer user class.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>90&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -226,7 +229,7 @@
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>OpenCD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>OpenCD</td><td>180&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PB</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
@@ -280,6 +283,20 @@
 <tr><th scope="row">GPW<span class="arrow">-&gt;</span>Wintersakura</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GPW<span class="arrow">-&gt;</span>Xinglin</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">HDBits (HDB)<br>Invite forum unlocks with 1080i user class and 1 year account age. 1080i user class: 30GB download, 0.95 ratio, 4 weeks account age.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>Aither</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>ACM</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>BiB</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>BLU</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>D3</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>GGn</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>MTV</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>OPS</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>TTG</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">JPopsuki (JPS)<br>Invite forum is not locked.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">KamePT (KamePT)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age, 40,000 seed points.</td></tr>
@@ -314,7 +331,7 @@
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Milkie</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>MiM</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>OBS</td><td>90&nbsp;days</td><td>100GB upload. 3 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OPS</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OPS</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>OTW</td><td>28&nbsp;days</td><td>1 other tracker profile.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>2 other tracker profiles. 6 months account age.</td></tr>
@@ -422,47 +439,49 @@
 <tr><th scope="row">PTer<span class="arrow">-&gt;</span>Xinglin</td><td>35&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">PassThePopcorn (PTP)<br>No requirement data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>AB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>AR</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BdC</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BiB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BLU</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>CH</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>D3</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>Emp</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>FF</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>GGn</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>GPW</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDSky</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>LzTr</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>MTV</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PTN</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PxHD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SC</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SceneHD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SM</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TG</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>THC</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TLFB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TTech</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>AB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>AR</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BdC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BiB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BLU</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>CH</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>D3</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>Emp</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>FF</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>GGn</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>GPW</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDSky</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>LzTr</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>MTV</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PTN</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PxHD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SceneHD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TG</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>THC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TLFB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TTech</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Redacted (RED)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.65 ratio, 5 torrents uploaded, 2 weeks account age.<br><br>Elite user class: 100GB upload, 0.65 ratio, 50 torrents uploaded, 4 weeks account age.<br>Torrent Master user class: 500GB upload, 0.65 ratio, 500 torrents uploaded, 8 weeks account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Power User user class + 1 year account age, or Elite user class + 6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BdC</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>CCC</td><td>14&nbsp;days</td><td>Other tracker profiles.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>CCS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1.0 ratio. 6 months account age.</td></tr>
@@ -521,11 +540,11 @@
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>SpeedApp</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
-<tr class="spacer"></tr>
 <tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr><tr class="spacer"></tr>
 </table>
 </body>
 </html>
