--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>Aither</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>ANT</td><td>180&nbsp;days</td><td>3 other tracker profiles.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1.0 ratio.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>HDB</td><td>913&nbsp;days</td><td>3 other top tracker profiles. King user class. 3TB seed size. 5 months average seed time. 30 months account age.<br>Banned countries: China, Egypt, Latvia, Russia, Turkey, Ukraine, Vietnam, Poland and India.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>Hone</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>NBL</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -528,25 +529,17 @@
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>Xinglin</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">UHDBits (UHDB)<br>Invite forum unlocks with Extreme User user class: 300GB upload, 2.0 ratio, 6 snatches, 20 seed/leech ratio, 8 weeks account age.</td></tr>
+<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>Aither</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>ANT</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>BdC</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>BHDTV</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>BLU</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>FL</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>HDSky</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>JPS</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>1.5 ratio, 6 months account age.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>NBL</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>OBS</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>OPS</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>SpeedApp</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr><tr class="spacer"></tr>
 </table>
 </body>
 </html>
