--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>FF</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>LzTr</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Legend user class. 1 year account age.</td></tr>
@@ -149,7 +148,6 @@
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>DT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>FL</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BLU<span class="arrow">-&gt;</span>MTV</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>THD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
@@ -299,8 +297,6 @@
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>TTG</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">JPopsuki (JPS)<br>Invite forum is not locked.</td></tr>
-<tr class="spacer"></tr>
 <tr><td colspan="3">KamePT (KamePT)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age, 40,000 seed points.</td></tr>
 <tr><th scope="row">KamePT<span class="arrow">-&gt;</span>MDU</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">KamePT<span class="arrow">-&gt;</span>RedLeaves</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
@@ -334,8 +330,7 @@
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>MiM</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>NBL</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>OBS</td><td>90&nbsp;days</td><td>100GB upload. 3 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OPS</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OTW</td><td>28&nbsp;days</td><td>1 other tracker profile.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OPS</td><td>730&nbsp;days</td><td>2 years account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>2 other tracker profiles. 6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>SC</td><td>180&nbsp;days</td><td>50GB upload. 6 months account age.</td></tr>
@@ -345,7 +340,7 @@
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>TSP</td><td>60&nbsp;days</td><td>2.0 ratio. 2 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Xspeeds</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">MoreThanTV (MTV)<br>Invite forum unlocks with Camera Operator user class: 500GB upload, 8 weeks account age.<br><br>Boom Operator user class: 1000GB upload, 10 checked uploads, 5 forum posts.</td></tr>
+<tr><td colspan="3">MoreThanTV (MTV)<br>Invite forum unlocks with Camera Operator user class: 500GB upload, 8 weeks account age.<br><br>Boom Operator user class: 1000GB upload, 10 checked uploads, 5 forum posts.<br>Engineer user class: 3000GB upload, 500 checked uploads, 25 forum posts, 48 weeks account age.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>Aither</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
@@ -355,6 +350,7 @@
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>PTN</td><td>56&nbsp;days</td><td>Other tracker profiles.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>PxC</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>PB</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Engineer user class. 2 years account age.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>UHDB</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
@@ -393,7 +389,6 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">Orpheus (OPS)<br>Invite forum unlocks with Elite user class: 100GB upload, 1.05 ratio, 50 torrents uploaded, 4 weeks account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">OPS<span class="arrow">-&gt;</span>BLU</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>CCS</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>LzTr</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
@@ -493,7 +488,7 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>GPW</td><td>28&nbsp;days</td><td>4 weeks account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>HDB</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.<br>Additional requirements for Chinese users: 2 years account age. Either 2 other tracker profiles, or register with the same username as RED.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>HDB</td><td>730&nbsp;days</td><td>Torrent Master user class. 2 years account age. Some additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>LB</td><td>14&nbsp;days</td><td>1 other tracker profile.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>MAM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -502,7 +497,7 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>PTN</td><td>14&nbsp;days</td><td>Other tracker profiles.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Torrent Master user class. 2 years account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>Elite user class. 3 other tracker profile with 6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>RTT</td><td>365&nbsp;days</td><td>2 other tracker profiles. 1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>SC</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
@@ -535,11 +530,11 @@
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>NBL</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>OPS</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
-<tr class="spacer"></tr>
 <tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr><tr class="spacer"></tr>
 </table>
 </body>
 </html>
